improve demo output

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "{'status': 0, 'msg': '', 'data': {'url': 'http://localhost:5213/google'}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
     "requests.post(base_url / 'app' / 'api' / 'createUrl', json={\n",
     "    'originalUrl': 'https://www.google.com/',\n",
     "    'customAlias': 'google'\n",
-    "})"
+    "}).json()\n"
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
